--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.kannadanudimuttugalu.ui.home.HomeFragment"
+        android:name="com.example.kannadanudimuttugalu.ui.home.DariNurariveFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.example.kannadanudimuttugalu.ui.gallery.GalleryFragment"
+        android:name="com.example.kannadanudimuttugalu.ui.gallery.AboutFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_about" />
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.example.kannadanudimuttugalu.ui.slideshow.SlideshowFragment"
+        android:name="com.example.kannadanudimuttugalu.ui.slideshow.ProfileFragment"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_profile" />
 </navigation>
